chore: prepare for dumb release

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "supervad-typescript",
+  "name": "supervad",
   "version": "0.0.0-pre",
   "main": "index.js",
   "repository": "https://github.com/ex3ndr/supervad-typescript.git",
