--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "supervad",
   "version": "0.0.1-pre",
-  "main": "index.js",
+  "main": "lib/ndex.js",
   "repository": "https://github.com/ex3ndr/supervad-typescript.git",
   "author": "Steve Korshakov <steve@korshakov.com>",
   "license": "MIT",
